Implemented to following:   - add and remove buttons (front/back)   - functionality to store persistent data in json

--- a/gtk4/cosmicagenda/Makefile
+++ b/gtk4/cosmicagenda/Makefile
@@ -49,6 +49,9 @@ $(TARGET): $(OBJECTS)
 %.o: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -c -o $@ $< -I$(H_SRC_DIR)
 
+valgrind:
+	make && valgrind --leak-check=yes ./$(TARGET)
+
 run: build
 	./$(TARGET)
 
