added resources for readme, and wrote readme description

--- a/proj/cosmicagenda/Makefile
+++ b/proj/cosmicagenda/Makefile
@@ -65,6 +65,7 @@ bear:
 clean:
 	rm -f $(OBJECTS)
 	rm -f $(BUILT_SRC)
+	rm -f $(TARGET)
 
 # Define a target to clean up generated files
 clean-all:
